# tegridymidi

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  bits_and_ints.html  chords.html  constants.html  files_helpers.html  haystack_search.html  helpers.html  index.html  karaoke.html  matrixes.html  melodies.html  midi_to_colab_audio.html  misc.html  plots.html  processors.html  sample_midis_helpers.html  tokenizers.html
docs/legacy/: MIDI.html  README.md  TMELODIES.html  TMIDIX.html  TPLOTS.html  index.html
tegridymidi/: TPLOTS_SRC.py  __init__.py  bits_and_ints.py  chords.py  constants.py  files_helpers.py  haystack_search.py  helpers.py  karaoke.py  matrixes.py  melodies.py  midi_to_colab_audio.py  misc.py  plots.py  processors.py  sample_midis_helpers.py  tegridymidi.py  tmidix.py  tokenizers.py  x_transformer.py
tegridymidi/examples/: README.md
tegridymidi/legacy/: MIDI.py  TMELODIES.py  TPLOTS.py  __init__.py
tegridymidi/sample_midis/: README.md
