[build-system]
requires = ["setuptools>=74.1.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tegridymidi"
version = "0.2.0"
description = "Tegridy MIDI"
authors = [
    { name = "Alex Lev", email = "alexlev61@proton.me" }
]
dependencies = [
    # List your dependencies here
]
