[build-system]
requires = ["setuptools>=74.1.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tegridymidi"
version = "24.9.7"
description = "Tools for reading, writing, and manipulating MIDIs"
authors = [
    {name = "Alex Lev", email = "alexlev61@proton.me"}
]
maintainers = [
  {name = "Alex Lev", email = "alexlev61@proton.me"}
]
dependencies = [
    "tqdm",
    'pillow',
    "numpy",
    "matplotlib",
    "scipy",
    "networkx",
    "scikit-learn",
]
keywords = ["MIDI", "tegridy", "tools"]  # Add your keywords here
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",  
    "Operating System :: OS Independent",        
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.6"  # Specify the Python version
license = { text = "Apache Software License 2.0" }  # Specify the license

[project.optional-dependencies]
cuda = [
    'torch',
    "einops",
    "cupy-cuda12x",
    "torch-summary",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/asigalov61/tegridymidi"
Examples = "https://github.com/asigalov61/tegridymidi/tegridymidi/examples"
Documentation = "https://github.com/asigalov61/tegridymidi/docs"
Repository = "https://github.com/asigalov61/tegridymidi"
Issues = "https://github.com/asigalov61/tegridymidi/issues"
Discussions = "https://github.com/asigalov61/tegridymidi/discussions"
